removed styles import for working css

--- a/src/pages/Auth/Signup/Signup.css
+++ b/src/pages/Auth/Signup/Signup.css
@@ -3,4 +3,9 @@
   align-items: center;
   flex-direction: column;
 }
+
+h1 {
+  /* adding to test CSS linking */
+  color: rgb(226, 189, 140);
+} 
   
