--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -1,14 +1,58 @@
-.container {
-  display: flex;
-  flex-flow: column;
+body {
+  background-color: rgb(111, 72, 175);
+}
+h1 {
+  font-size: 3.6rem;
+  font-family: 'Prata', serif;
+  color: white;
+}
+form {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  box-shadow: 10px 10px 5px rgb(68, 64, 64);
+}
+label {
+  font-size: 18px;
+}
+input[type=text],input[type=password], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+button {
+  border: none;
+  background-color: rgb(111, 72, 175);
+  margin: 8px;
+  color: white;
+  font-size: 17px;
+  font-weight: bold;
   align-items: center;
+  padding: 4px 12px;
+  border-radius: 16px;
 }
-
-.label,
-.button {
-  margin-right: .5rem;
-}
-
-.inputContainer {
-  margin-bottom: 1rem;
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  
 }
