--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -1,21 +1,19 @@
 body {
-  background-color: rgb(111, 72, 175);
-}
-h1 {
-  font-size: 3.6rem;
-  font-family: 'Prata', serif;
-  color: white;
+  background-color: rgb(58, 99, 211);
 }
 form {
   border-radius: 5px;
+  border-right: 2.5px solid black;
+  border-bottom: 2.5px solid black;
   background-color: #f2f2f2;
   padding: 20px;
-  box-shadow: 10px 10px 5px rgb(68, 64, 64);
+  box-shadow: 15px 15px 5px rgb(16, 36, 145);
 }
 label {
   font-size: 18px;
+  font-weight: 300;
 }
-input[type=text],input[type=password], select {
+input[type=text],input[type=password], input[type=number], select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -42,17 +40,29 @@ input[type=submit]:hover {
 
 button {
   border: none;
-  background-color: rgb(111, 72, 175);
+  background-color: rgb(58, 99, 211);
   margin: 8px;
   color: white;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
   font-size: 17px;
-  font-weight: bold;
+  font-weight: 400;
   align-items: center;
-  padding: 4px 12px;
+  padding: 6px 36px;
   border-radius: 16px;
+  cursor: pointer;
 }
 .buttonContainer {
   display: flex;
   justify-content: center;
   
+}
+input[type=file] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: none;
+  border-radius: 4px;
+  box-sizing: border-box;
+  padding: 2px 0 10px 2px ;
 }
