--- a/src/pages/Auth/Signup/Signup.module.css
+++ b/src/pages/Auth/Signup/Signup.module.css
@@ -5,7 +5,13 @@
 }
 
 h1 {
-  /* adding to test CSS linking */
-  color: rgb(226, 189, 140);
-} 
+  font-size: 2.6rem;
+  font-family: 'Courgette', cursive;
+  color: white;
+  background-color: tomato;
+  border: 0.5px solid rgb(16, 36, 145);
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 15px 15px 5px rgb(16, 36, 145);
+}
   
