--- a/src/pages/Auth/Login/Login.module.css
+++ b/src/pages/Auth/Login/Login.module.css
@@ -3,3 +3,10 @@
   align-items: center;
   flex-direction: column;
 }
+body {
+  background-image: url("../../../components/images/jpg-draft1.jpg") ;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
