pushing this branch one last time before starting a new branch

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,8 +1,9 @@
 .nav-bar{
     /* just to test if css is connected - and it is! */
     background: #b9b9ff;
+    height: 40px;
 
 }
-.home {
+a {
     color: red;
 }
