--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,9 +1,29 @@
 .nav-bar{
     /* just to test if css is connected - and it is! */
     background: #b9b9ff;
-    height: 40px;
+    height: 5vh;
+    border-bottom: 1px solid black;
+    text-align: ;
 
 }
-a {
-    color: red;
+.nav-a {
+    color: black;
+    font-family: 'Courgette', cursive;
+    font-size: 2rem;
+    text-decoration: none;
+    margin: 10px;
+    
+}
+.login, .signup{
+    color: white;
+    text-align: right;
+    text-align: right;
+}
+
+.signup:hover{
+    color: black;
+}
+
+.login:hover{
+    color: black;
 }
