insert lat long props into map and update styling

--- a/src/components/Event/EventDetailsMap.css
+++ b/src/components/Event/EventDetailsMap.css
@@ -1,5 +1,6 @@
 .pin {
-  display:flex;
-  align-items: center;
-height: 70px;
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  height: 70px;
 }
