--- a/src/components/Event/EventCard.css
+++ b/src/components/Event/EventCard.css
@@ -1,10 +1,11 @@
 .event-card {
   /* to distinguish card from background */
   background-color: white;
-  border-radius: 3px;
+  border-radius: 5px;
   width: 53vw;
   height: 20vh;
   display: flex;
+  margin: 2vh;
 }
 
 .img-event {
@@ -12,5 +13,13 @@
   height: 20vh;
   border-radius: 5px;
   
+}
 
+.card-text {
+  margin-left: 1vw;
+  color: black;
+}
+
+.card-details {
+  text-decoration: none;
 }
