--- a/src/components/Event/EventCard.css
+++ b/src/components/Event/EventCard.css
@@ -2,10 +2,11 @@
   /* to distinguish card from background */
   background-color: white;
   border-radius: 5px;
-  width: 53vw;
+  width: 45%;
   height: 20vh;
   display: flex;
   margin: 2vh;
+  display: inline-flex;
 }
 
 .img-event {
@@ -18,6 +19,7 @@
 .card-text {
   margin-left: 1vw;
   color: black;
+  max-height: 18vh;
 }
 
 .card-details {
