--- a/src/components/Event/EventCard.css
+++ b/src/components/Event/EventCard.css
@@ -7,13 +7,20 @@
   display: flex;
   margin: 2vh;
   display: inline-flex;
+  border: 1px solid rgb(255, 253, 208);
 }
 
 .img-event {
   width: 23vw;
   height: 20vh;
-  border-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
   
+}
+
+.card-header {
+  font-family: 'Courgette', cursive;
+  text-decoration: none !important;
 }
 
 .card-text {
