ended up styling events detail page, when logged in profile does not follow css values

--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -2,3 +2,7 @@
     /* to test that css is connected */
     background-color: lightblue;
 }
+.avatar {
+    height: 20rem;
+    border-radius: 10px;
+}
