--- a/src/pages/EventDetails/EventDetails.css
+++ b/src/pages/EventDetails/EventDetails.css
@@ -10,6 +10,9 @@
 .details-img {
     border: 2px solid white;
     max-height: 500px;
+    max-width: 750px;
+    min-height: 400px;
+    min-width: 600px;
     border-radius: 10px;
     align-content: center;
     margin-left: auto;
