--- a/src/components/Feed/SearchHeader.css
+++ b/src/components/Feed/SearchHeader.css
@@ -15,7 +15,7 @@
   border: 1px solid #26262b;
   color: rgb(200, 200, 200);
   border-radius: 8px ;
-  margin-top: 50px;
+  margin-top: 3.5rem;
 }
 
 .header h3 {
