--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -44,4 +44,6 @@
     padding: 20px;
     border-radius: 10px;
     background-color: palegoldenrod;
+    box-shadow: 0 4px mediumslateblue;
+
 }   
