more minor tweaks

--- a/src/pages/EventDetails/EventDetails.css
+++ b/src/pages/EventDetails/EventDetails.css
@@ -4,6 +4,8 @@
 .details-h1 {
     color: black;
     background-color: palegoldenrod;
+    margin-top: 5rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     
 }
 
