--- a/src/components/Feed/SearchHeader.css
+++ b/src/components/Feed/SearchHeader.css
@@ -1,12 +1,12 @@
 .hidden-container {
-  width: 80vw;
+  
   /* position: fixed; */
   
   padding: 10px 10px 0px 10px;
 }
 
 .header {
-  width: 95vw;
+  width: 100%;
   height: 50px;
   display: flex;
   align-items: center;
