--- a/src/pages/Auth/Signup/Signup.module.css
+++ b/src/pages/Auth/Signup/Signup.module.css
@@ -10,10 +10,9 @@ h1 {
   color: black;
   background-color: palegoldenrod;
   border: 0.5px solid rgb(16, 36, 145);
-  margin: 20px;
   padding: 10px;
   border-radius: 10px;
   box-shadow: 15px 15px 5px rgb(16, 36, 145);
-  margin: 60px 10px 20px 10px;
+  margin: 4.5rem 10px 20px 10px;
 }
   
