--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -3,6 +3,7 @@
     background-color: lightblue;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
+    height: 100vh;
 }
 
 .name {
@@ -27,10 +28,10 @@
     box-shadow: 4px 4px mediumslateblue;
 }
 .info {
-    display: block;
+    display: flex;
     margin: 40px;
     padding: 20px;
-    padding-left: 70vw;
+    padding-left: 20vw;
     border-radius: 10px;
     background-color: palegoldenrod;
     grid-column-start: 1;
@@ -38,16 +39,17 @@
     text-align: left;
     align-content: flex-end;
 }
-.eventsProfile {
-    display: inline-flex;
-    margin: 40px;
+.info > div {
+    margin-right: 10px;
 }
 .eventsAttendance {
     width: 32%;
-    display: block;
+    display: inline;
     margin: 20px;
+    margin-bottom: 50px;
     padding: 20px;
     border-radius: 10px;
+    border: 2px solid mediumslateblue;
     background-color: palegoldenrod;
     box-shadow: 0 4px mediumslateblue;
 
